<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/image">


    <Button
        android:id="@+id/find_nearby_routes_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="50dp"
        android:background="#00ffffff"
        android:text="@string/find_nearby_button"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"

        android:textSize="18sp" />

    <Button
        android:id="@+id/login_view_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/find_nearby_routes_button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="#00ffffff"
        android:textColor="#FFFFFF"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/profile_view_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/find_nearby_routes_button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="#00ffffff"
        android:textColor="#FFFFFF"
        android:onClick="onClickProfile"
        android:text="@string/profile_button" />

    <ImageView
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />
</RelativeLayout>