<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250sp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_first_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="50sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_last_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_confirm_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="#e3f7fff6"
            android:ems="10"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_label"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="4sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:background="@android:color/transparent"
            android:onClick="addUser"
            android:text="REGISTER"
            android:textColor="#abffffff"

            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>